# qpitch

./: CMakeLists.txt  Doxyfile  README  README.md  changelog
cmake_modules/: FindFFTW3.cmake  FindPortaudio.cmake
docs/resources/: footer.html
src/: CMakeLists.txt  main.cpp  qaboutdlg.cpp  qaboutdlg.h  qlogview.cpp  qlogview.h  qosziview.cpp  qosziview.h  qpitch.cpp  qpitch.h  qpitch.pro  qpitchcore.cpp  qpitchcore.h  qsettingsdlg.cpp  qsettingsdlg.h
src/data/: qpitch.1  qpitch.desktop
src/ui/: qaboutdlg.ui  qpitch.qrc  qpitch.rc  qpitch.ui  qsettingsdlg.ui
src/ui/icons/: qpitch.icns  qpitch.xpm
